--- a/docs/math/number-bonds/style.css
+++ b/docs/math/number-bonds/style.css
@@ -1,27 +1,3 @@
-.title {
-    font: 40px Verdana;
-    padding: 10px 30px;
-    color: darkcyan;
-    float: none;
-    font-weight: bold;
-}
-
-body {
-    margin: 0 auto;
-    background-position:center;
-    background-size: contain;
-}
-
-.body {
-    margin: 30px 30px;
-}
-
-#content {
-    margin: auto;
-    width: 80%;
-    text-align: center;
-}
-
 #equation {
     display: inline-flex;
     list-style: none;
@@ -31,61 +7,33 @@ body {
 #equation li {
     padding: 0px 20px;
     font: 80px Verdana;
+    color: var(--darkblue);
 }
 
 #equation li input {
     padding: 0px 0px;
     border-radius: 0.2em;
-    border: 3px solid black;
+    border: 3px solid var(--orange);
     outline-style: none;
     font: 80px Verdana;
     resize: none;
     text-align: center;
-}
-
-.navbar  {
-    position: sticky;
-    background-color: darkcyan;
-    padding:10px 10px;
-    color: white;
-    margin: 0 auto;
-    overflow: hidden;
-}
-
-.navbar .right {
-    right: auto;
-    float: right;
-}
-
-.navbar button {
-    border: 0;
-    border-radius: 10px;
-    padding: 10px 0px;
-    background-color: cadetblue;
-}
-
-.navbar button:hover {
-    background-color: gray;
-    color: black;
-}
-
-.navbar a {
-    font: 20px Verdana;
-    color: white;
-    text-align: center;
-    padding: 16px 32px;
-    text-decoration: none;
+    background-color: var(--lightblue);
+    color: var(--darkblue);
 }
 
 #score-label {
     font: 50px Verdana;
-    color: green;
 }
 
 #score {
     font: 50px Verdana;
     font: 50px Verdana;
-    color: lime;
+    color: var(--orange);
+}
+
+div {
+    color: var(--darkblue);
 }
 
 input::-webkit-outer-spin-button,
